Fixed overlapping details (#31)

--- a/src/components/CertificateVerifyBlock/detailedCertificateBlock.scss
+++ b/src/components/CertificateVerifyBlock/detailedCertificateBlock.scss
@@ -5,7 +5,6 @@
   border-width: 1px;
   border-style: solid;
   min-width: 300px;
-  position: absolute;
   left: 300px;
   z-index: 1;
 }
